--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.6.13",
     "mongoose-timestamp": "^0.6.0",
+    "mongoose-to-swagger": "0.0.4",
     "restify": "^8.4.0",
     "restify-cors-middleware": "^1.1.1",
     "restify-errors": "^8.0.1",
-    "restify-jwt-community": "^1.1.0"
+    "restify-jwt-community": "^1.1.0",
+    "swagger-ui-express": "^4.1.0"
   },
   "devDependencies": {
     "nodemon": "^1.19.2"
