--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "restify-cors-middleware": "^1.1.1",
     "restify-errors": "^8.0.1",
     "restify-jwt-community": "^1.1.0",
+    "swagger-jsdoc": "^3.4.0",
+    "swagger-ui-dist": "^3.23.9",
     "swagger-ui-express": "^4.1.0"
   },
   "devDependencies": {
