--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.6.13",
     "mongoose-timestamp": "^0.6.0",
